ingresscontroller/nginx-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
spec:
  selector:
    app: identity
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  selector:
    app: catalog
  ports:
  - port: 80
    protocol: TCP
